--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,5 +21,8 @@
     "mongoose": "^6.4.0",
     "nodemon": "^2.0.16",
     "xss-clean": "^0.1.1"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
