--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
     "nodemon": "^2.0.16",
-    "xss-clean": "^0.1.1"
+    "swagger-ui-express": "^4.4.0",
+    "xss-clean": "^0.1.1",
+    "yamljs": "^0.3.0"
   },
   "engines": {
     "node": "14.x"
